# lottie-editor

./: .gitignore  QUICKSTART.md  README.md  SETUP_COMPLETE.md  aqua-checksums.json  aqua.yaml  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
web/lottie-tools/: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  PLAN.web-editor.md  README.md  docker-compose.yml  run.sh  setup.sh
web/lottie-tools/.claude/agents/: lottie-spec-expert.md  milestone-validator.md
web/lottie-tools/.github/workflows/: deploy-pages.yml
web/lottie-tools/lottie-to-gif/: CONTRIBUTING.md  PLAN.md  README.md  jest.config.js  package.json
web/lottie-tools/lottie-to-gif/examples/: bond_vector.json
web/lottie-tools/lottie-to-gif/src/: cli.ts  converter.ts  gif-encoder.ts  index.ts  lottie-parser.ts  renderer.ts
web/lottie-tools/lottie-to-gif/src/templates/: lottie-player.html
web/lottie-tools/lottie-to-gif/src/types/: config.ts  encoder.ts  lottie.ts  renderer.ts
web/lottie-tools/lottie-to-gif/tests/integration/: converter.test.ts  gif-encoder.test.ts  renderer.test.ts
web/lottie-tools/lottie-to-gif/tests/unit/: lottie-parser.test.ts
web/lottie-tools/web-editor/: .gitignore  CHANGELOG.md  index.html  package.json  vite.config.ts  vitest.config.ts
web/lottie-tools/web-editor/reference-docs/: lottie.schema.json
web/lottie-tools/web-editor/src/: App.css  App.tsx  index.css
web/lottie-tools/web-editor/src/components/: BezierEditor.css  Canvas.css  (+30 more)
web/lottie-tools/web-editor/web-editor/: package.json
(+28 files in other folders)
